Project/Phase2/test_ex/test1.out
Error type 14 at line 10: no such member: weight
