Project/Phase2/test_ex/test1.spl
struct Person {
    int age;
    float height;
};

int main()
{
    struct Person p;
    p.age = 30;
    p.weight = 65.0;
    return 0;
}

